--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
    <div style="border-bottom: 1px solid;border-top: 1px solid;border-color: black; margin: 20px; padding: 30px;">
       <div style="text-align: center; "> <a href="index.html">Home </a>
-         <a href="menu.html">Menu</a>
-         <a href="about.html">About</a>
-         <a href="timings.html">Timings</a>
-         <a href="contact.html">Contact Us</a>
+         <a href="Menu.html">Menu</a>
+         <a href="About.html">About</a>
+         <a href="Timings.html">Timings</a>
+         <a href="Contact.html">Contact Us</a>
       </div>
    </div>
    <h4 style="text-align: center;">We serve delicious fast food items</h4>
