--- a/Assignment-3/Menu.html
+++ b/Assignment-3/Menu.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
     <link rel="stylesheet" href="menu.css">
 </head>
+
 <body>
-    <div  class="logo"> <img  src="Assets/removed (1).png" alt="Logo" ></div>
+    <div class="logo"> <img src="Assets/removed (1).png" alt="Logo"></div>
     <div class="navigation">
         <a class="home" href="index.html">Home</a>
-        <a class="menu"  href="Menu.html">Menu</a>
+        <a class="menu" href="Menu.html">Menu</a>
         <a class="about" href="About.html">About</a>
         <a class="timings" href="Timing.html">Timings</a>
         <a class="contact" href="Contact.html">Contact Us</a>
     </div>
-<div class="menu"><img  src="Assets/menu-3206749_1280.jpg" alt="menu"></div>
-<div  burger1><img src="Assets/closs full.jpeg" alt=" burger"> </div>
-<div  burger2><img src="Assets/close full 2.jpeg" alt=" burger"> </div>
-<div  pizza1><img src="Assets/WhatsApp Image 2024-01-03 at 8.39.18 PM (3).jpeg" alt="pizza"> </div>
-<div  pizza2><img src="Assets/top pizza.jpeg" alt="pizza"> </div>
-   
+
+    <h2>Burgers</h2>
+    <img id="burger1" class="back" src="Assets/closs full.jpeg" alt=" burger">
+    <img id="burger2" class="back" src="Assets/close full 2.jpeg" alt=" burger">
+    <img id="burger3" class="back" src="Assets/fries.jpeg" alt="burger">
+    <h2>Pizza</h2>
+    <img id="pizza1" class="back" src="Assets/WhatsApp Image 2024-01-03 at 8.39.18 PM (3).jpeg" alt="pizza">
+    <img id="pizza2" class="back" src="Assets/top pizza.jpeg" alt="pizza">
+    <img id="pizza3" class="back" src="Assets/WhatsApp Image 2024-01-03 at 8.39.26 PM.jpeg" alt="pizza">
     <p class="copywrite">Copywrite © 2021 Umair's cusine</p>
 </body>
 </body>
+
 </html>
