--- a/Assignment-3/About.html
+++ b/Assignment-3/About.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umair's cusine</title>
-    <link rel="stylesheet" href="about.css">
+    <link rel="about" href="about.css">
 </head>
 
 <body>
