--- a/Assisgnment-4/index.html
+++ b/Assisgnment-4/index.html
@@ -6,67 +6,204 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TROPIKO</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/9c285c7f7a.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
-    <div id="navigation">
-        <nav>
-            <div id="logo"><img src="Images/logo.png" alt="logo"><strong>TROPIKO</strong></div>
-            <div id="bar"><a href="">home
-                </a>
-                <a href="">Fruits</a>
-                <a href="">Services</a>
-                <a href="">Contact Us</a>
-                <img src="" alt="">
-                <button>GET A QUOTE</button>
+    <nav>
+        <ul>
+            <li><img src="Images/logo.png" alt="Logo">
+            <li>
+                <h1>TROPIKO</h1>
+            </li>
+            <div class="home">
+                <li> <a class="home" href="">Home</a></li>
             </div>
-        </nav>
-    </div>
+            <div class="fruit">
+                <li> <a href="">Fruits</a></li>
+            </div>
+            <div class="service">
+                <li> <a href="">Services</a></li>
+            </div>
+            <div class="contact">
+                <li> <a href="">Contact Us</a></li>
+            </div>
+            <div class="search">
+                <li> <i class="fa-solid fa-magnifying-glass"></i></li>
+                <div></div>
+                <div class="button">
+                    <li><a href="">GET A QUOTE</a></li>
+                </div>
+        </ul>
+
+    </nav>
 
 
-    <div id="hero">
-        <div></div>
-        <div></div>
+
+
+
+
+
+    <div>
+        <div id="herofirst">
+            <h1>Welcome to our fruit shop</h1>
+            <p>There are many variation of passage of lorem ipsum available,but the majority have suffered alteration in
+                same form ,by injected humour, or randomized words which don't look even slightly believable.</p>
+            <!-- <button>SHOP NOW</button> <button>CONTACT US</button> -->
+            <div class="firstb"><a href="default.asp" target="_blank">SHOP NOW</a></div>
+            <div class="secondb"><a href="" target="_blank">CONTACT US</a></div>
+        </div>
+        <div id="herosecond"><img src="Images/slide-img.png" alt="error"></div>
     </div>
     <div id="services">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="head">
+            <h2>Our Services</h2>
+            <span>Lorem ipsum dolor, sit amet consectetur adipisicing.
+            </span>
+        </div>
+        <div class="service1">
+            <img src="Images/logo.png" alt="">
+            <span>Orange</span>
+            <p>There are many variation of passages of lorwm ipsum available but the majority have suffered alteration
+                in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+        </div>
+        <div class="service2"> <img src="Images/grapes.png" alt="error">
+            <span>Orange</span>
+            <p>There are many variation of passages of lorwm ipsum available but the majority have suffered alteration
+                in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+        </div>
+        <div class="service3"><img src="Images/gauva.png" alt="error">
+            <span>Orange</span>
+            <p>There are many variation of passages of lorwm ipsum available but the majority have suffered alteration
+                in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+        </div>
+        <div class="readmore"><a href="">Read more</a></div>
     </div>
     <div id="fruits">
-        <div></div>
         <div>
-            <div></div>
-            <div></div>
-        </div>
-        <div>
-            <div></div>
-            <div></div>
-        </div>
-        <div>
-            <div></div>
-            <div></div>
-        </div>
+            <div class="fruithead">
 
-    </div>
-    <div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
-    <div id="contactus">
-        <div></div>
-        <div></div>
-    </div>
-    <div id="footer">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-    </div>
+                <h1>Fresh Fruits</h1>
+                <p>There are many variation of passage of lorem ipsum available , but the majority have</p>
+            </div>
+            <div>
+                <div class="fruit1">
+                    <h3>Best Fresh Orange</h3>
+                    <p>but the majority have suffered alteration
+                        in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+                </div>
+                <div class="fruit1buy"> <a href="">BUY NOW</a></div>
+                <div class="fruit1image"><img src="Images/orange.png" alt="error"></div>
+            </div>
+            <div>
+                <div class="fruit2">
+                    <h3>Best Fresh Grapes</h3>
+                    <p>but the majority have suffered alteration
+                        in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+                </div>
+                <div class="fruit2button"> <a href="">BUY NOW</a></div>
+                <div class="fruit2image"> <img src="Images/grapes.png" alt="error"></div>
+            </div>
+            <div>
+                <div class="fruit3">
+                    <h3>Best Fresh Grapes</h3>
+                    <p>but the majority have suffered alteration
+                        in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
+                </div>
+                <div class="fruit3button"> <a href="">BUY NOW</a></div>
+                <div class="fruit3image"> <img src="Images/gauva.png" alt="error"></div>
+            </div>
 
+        </div>
+        <div>
+            <div class="client">
+                <h2>TESTIMONIAL</h2>
+                <p>There are mny variation of passage of lorem ipsum available,but the majority have</p>
+            </div>
+            <div class="clientimg"><img src="Images/client.png" alt="error"></div>
+            <div class="clientpara">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime labore debitis, fugiat temporibus
+                    doloribus aspernatur odit perferendis in sunt aut id possimus impedit! Consequatur alias minima
+                    officiis. Odit, eligendi in? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum alias
+                    exercitationem harum officiis quasi similique eius quibusdam autem deleniti pariatur! Lorem ipsum
+                    dolor sit amet consectetur adipisicing elit. Blanditiis quod sequi in, fugit sapiente autem nobis
+                    qui iusto veritatis veniam.</p>
+            </div>
+        </div>
+        <div id="contacts">
+            <div id="form">
+                <form action="">
+                    <h2>Contact Us</h2>
+
+                    <div class="name" id="namedecoration"> <input type="text" name="Name" id="" placeholder="Name">
+                    </div>
+                    <div class="number"> <input type="text" name="number" id="" placeholder="Phone number"></div>
+                    <div class="email"> <input type="email" name="email" id="" placeholder="Email"></div>
+                    <div class="message"><textarea name="area" id="" cols="50" rows="1"
+                            placeholder="Message"></textarea></div>
+                    <div class="formbutton"><a href="">Send</a></div>
+
+
+                </form>
+            </div>
+            <div class="formimg"> <img src="Images/orange-dish.png" alt="error"></div>
+        </div>
+        <div id="footer">
+            <!-- Before Footer -->
+            <div class="list1">
+                <h4>Fruits</h4> <span>randomised</span><br>
+                <span>word's which</span><br>
+                <span>dont even look</span><br>
+                <span>slightly</span><br>
+                <span>believable .if you</span><br>
+                <span>are going to use</span><br>
+                <span>a passage of</span><br>
+                <span>Lorem ipsum</span>
+
+            </div>
+            <div class="list2">
+                <h4>Services</h4> <span>randomised</span><br>
+                <span>word's which</span><br>
+                <span>dont even look</span><br>
+                <span>slightly</span><br>
+                <span>believable .if you</span><br>
+                <span>are going to use</span><br>
+                <span>a passage of</span><br>
+                <span>Lorem ipsum</span>
+            </div>
+            <div class="list3">
+                <h4>Lists</h4> <span>randomised</span><br>
+                <span>word's which</span><br>
+                <span>dont even look</span><br>
+                <span>slightly</span><br>
+                <span>believable .if you</span><br>
+                <span>are going to use</span><br>
+                <span>a passage of</span><br>
+                <span>Lorem ipsum</span>
+
+            </div>
+            <div class="icon">
+                <h4>Follow Us</h4>
+            </div>
+            <div class="icon2">
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-solid fa-x"></i></span>
+                <span><i class="fa-brands fa-linkedin"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+            </div>
+            <div class="icon3">
+                <h4>Subscribe Now</h4>
+
+                <textarea name="" id="" cols="20" rows="1"></textarea>
+
+            </div>
+            <div class="icon4"><a href="">Subscribe</a></div>
+        </div>
+        <!-- footer -->
+        <div class="footer">
+            <p>Copywrite @ 2022 All Rights Reserved by Dev Umair</p>
+        </div>
 </body>
 
 </html>
