--- a/Assisgnment-4/index.html
+++ b/Assisgnment-4/index.html
@@ -18,22 +18,23 @@
                 <h1>TROPIKO</h1>
             </li>
             <div class="home">
-                <li> <a class="home" href="">Home</a></li>
+                <li> <a class="home" href="#herofirst">Home</a></li>
             </div>
             <div class="fruit">
-                <li> <a href="">Fruits</a></li>
+                <li> <a href="#fruithead">Fruits</a></li>
             </div>
             <div class="service">
-                <li> <a href="">Services</a></li>
+                <li> <a href="#head">Services</a></li>
             </div>
             <div class="contact">
-                <li> <a href="">Contact Us</a></li>
+                <li> <a href="#name">Contact Us</a></li>
             </div>
             <div class="search">
                 <li> <i class="fa-solid fa-magnifying-glass"></i></li>
                 <div></div>
                 <div class="button">
-                    <li><a href="">GET A QUOTE</a></li>
+                    <li><a href="https://english.stackexchange.com/questions/251563/get-a-quote-or-get-a-quotation">GET
+                            A QUOTE</a></li>
                 </div>
         </ul>
 
@@ -51,13 +52,17 @@
             <p>There are many variation of passage of lorem ipsum available,but the majority have suffered alteration in
                 same form ,by injected humour, or randomized words which don't look even slightly believable.</p>
             <!-- <button>SHOP NOW</button> <button>CONTACT US</button> -->
-            <div class="firstb"><a href="default.asp" target="_blank">SHOP NOW</a></div>
-            <div class="secondb"><a href="" target="_blank">CONTACT US</a></div>
+            <div class="firstb"><a
+                    href="https://www.dominos.com.pk/deals?gad_source=1&gclid=Cj0KCQiAoKeuBhCoARIsAB4WxtfqESKqQz0lOJS-al-TEg1QZE7zJ1leL9ZVcDQ91n6RsokCsrh2RpcaAsNxEALw_wcB"
+                    target="">SHOP NOW</a></div>
+            <div class="secondb"><a href="https://www.dominos.com.pk/feedback" target="">CONTACT US</a></div>
         </div>
         <div id="herosecond"><img src="Images/slide-img.png" alt="error"></div>
     </div>
+
+
     <div id="services">
-        <div class="head">
+        <div id="head">
             <h2>Our Services</h2>
             <span>Lorem ipsum dolor, sit amet consectetur adipisicing.
             </span>
@@ -78,11 +83,12 @@
             <p>There are many variation of passages of lorwm ipsum available but the majority have suffered alteration
                 in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
         </div>
-        <div class="readmore"><a href="">Read more</a></div>
+        <div class="readmore"><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4644575/">Read more</a></div>
     </div>
-    <div id="fruits">
+
+    <div id="thirdpart">
         <div>
-            <div class="fruithead">
+            <div id="fruithead">
 
                 <h1>Fresh Fruits</h1>
                 <p>There are many variation of passage of lorem ipsum available , but the majority have</p>
@@ -93,7 +99,7 @@
                     <p>but the majority have suffered alteration
                         in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
                 </div>
-                <div class="fruit1buy"> <a href="">BUY NOW</a></div>
+                <div class="fruit1buy"> <a href="https://naturals.pk/products/fresh-oranges">BUY NOW</a></div>
                 <div class="fruit1image"><img src="Images/orange.png" alt="error"></div>
             </div>
             <div>
@@ -102,16 +108,16 @@
                     <p>but the majority have suffered alteration
                         in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
                 </div>
-                <div class="fruit2button"> <a href="">BUY NOW</a></div>
+                <div class="fruit2button"> <a href="https://naturals.pk/products/grapes-sunderkhani">BUY NOW</a></div>
                 <div class="fruit2image"> <img src="Images/grapes.png" alt="error"></div>
             </div>
             <div>
                 <div class="fruit3">
-                    <h3>Best Fresh Grapes</h3>
+                    <h3>Best Fresh Guava</h3>
                     <p>but the majority have suffered alteration
                         in some form , by injected humor,or randomise word which don't lookmeven slightly believable</p>
                 </div>
-                <div class="fruit3button"> <a href="">BUY NOW</a></div>
+                <div class="fruit3button"> <a href="https://naturals.pk/products/guava">BUY NOW</a></div>
                 <div class="fruit3image"> <img src="Images/gauva.png" alt="error"></div>
             </div>
 
@@ -136,7 +142,7 @@
                 <form action="">
                     <h2>Contact Us</h2>
 
-                    <div class="name" id="namedecoration"> <input type="text" name="Name" id="" placeholder="Name">
+                    <div id="name" id="namedecoration"> <input type="text" name="Name" id="" placeholder="Name">
                     </div>
                     <div class="number"> <input type="text" name="number" id="" placeholder="Phone number"></div>
                     <div class="email"> <input type="email" name="email" id="" placeholder="Email"></div>
