--- a/Assisgnment-4/index.html
+++ b/Assisgnment-4/index.html
@@ -53,9 +53,9 @@
                 same form ,by injected humour, or randomized words which don't look even slightly believable.</p>
             <!-- <button>SHOP NOW</button> <button>CONTACT US</button> -->
             <div class="firstb"><a
-                    href="https://www.dominos.com.pk/deals?gad_source=1&gclid=Cj0KCQiAoKeuBhCoARIsAB4WxtfqESKqQz0lOJS-al-TEg1QZE7zJ1leL9ZVcDQ91n6RsokCsrh2RpcaAsNxEALw_wcB"
-                    target="">SHOP NOW</a></div>
-            <div class="secondb"><a href="https://www.dominos.com.pk/feedback" target="">CONTACT US</a></div>
+                    href="https://naturals.pk/
+                    target=">SHOP NOW</a></div>
+            <div class="secondb"><a href="https://naturals.pk/pages/complaint-form" target="">CONTACT US</a></div>
         </div>
         <div id="herosecond"><img src="Images/slide-img.png" alt="error"></div>
     </div>
