--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -6,29 +6,161 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
+  <script src="https://kit.fontawesome.com/9c285c7f7a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
   <header class="header">
-    <img src="Images/logo.png" alt="">
+
+
+    <img src="Images/logo 1.png" alt="">
     <nav class="navbar">
-      <li><a href="">01.About</a></li>
-      <li><a href="">02.Experience</a></li>
-      <li><a href="">03.Work</a></li>
-      <li><a href="">04.Contact</a></li>
-      <li><a href="">05.Blog</a></li>
+      <li><a href=""> 01. About</a></li>
+      <li><a href=""> 02. Experience</a></li>
+      <li><a href=""> 03. Work</a></li>
+      <li><a href=""> 04. Contact</a></li>
+      <li><a href=""> 05. Blog</a></li>
       <li><button>Resume</button></li>
     </nav>
   </header>
+
+
+  <div class="rightnav">
+    <a href="https://github.com/Arham-Naveed/SMIT-Assignments"><i class="fa-brands fa-github"></i></a>
+    <a href="https://www.instagram.com/_malikarham/"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://twitter.com/home?lang=en"><i class="fa-brands fa-x-twitter"></i></a>
+    <a href="https://www.linkedin.com/in/arham-naveed-5ab5132b4/"><i class="fa-brands fa-linkedin"></i></a>
+  </div>
+
+  <div class="rightnav2" style="border: 1px solid white; transform: rotate(90deg); width: 100px;  "> </div>
+  <div class="leftnav">
+    <a
+      href="https://mail.google.com/mail/u/0/#search/arhamnaveed873%40gmail.com?compose=new">arhamnaveed873@gmail.com</a>
+  </div>
+
+  <div class="leftnav2" style="border: 1px solid white; transform: rotate(90deg); width: 100px;  "> </div>
+
+
+
   <main>
-   <div class="main1"> <span> Hi,my name is</span>
-    <h1>Ahmad Jajja <br>Software Engineer and trainer </h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id adipisci officia provident eligendi accusantium
-      ratione quo natus ab eos, asperiores accusamus consequuntur explicabo odio laudantium! Lorem ipsum dolor sit, amet
-      consectetur adipisicing elit. Hic, quas.</p>
-      <button>Get in touch</button></div>
-  </main>
+    <div class="main1"> <span> Hi,my name is</span>
+      <div>
+        < <h1>Arham Naveed <br>Software Engineer and trainer </h1>
+      </div>
+      <div class="p">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id adipisci officia <br>provident eligendi
+          accusantium
+          ratione quo natus ab eos, asperiores accusamus consequuntur explicabo odio laudantium! <br>Lorem ipsum dolor
+          sit,
+          amet
+          consectetur adipisicing elit. Hic, quas.</p>
+        <button>Get in touch</button>
+      </div>
+
+    </div>
+
+    <div class="about">
+      <div class="about2">
+        <span class="about1">01. </span> <span>About Me</span>
+      </div>
+      <div class="border"></div>
+    </div>
+    <div class="aboutmain">
+      <div class="aboutmain1">
+
+        <p class="aboutmainpara">Hello! I'm Arham, a full stack software engineer based in Faisalabad, PK.</p>
+        <p class="aboutmainpara">Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat culpa voluptas ipsum
+          odio, omnis voluptatem cupiditate inventore officia, temporibus nam illum sit provident possimus, quidem
+          consequatur quibusdam ullam. Ducimus, expedita voluptatibus vel quaerat accusantium doloribus fugit dolor
+          ad!
+          Iste architecto aperiam optio esse minima reiciendis. Laborum, vitae dolor. Est, sint.</p>
+        <p class="aboutmainpara">As a tech trainer at the Saylani Welfare Mass Training & Job Creation ProgramI've
+          taught (wanna see how I provide training to my students? click here ) over 500 students, simplifying complex
+          programming concepts and solving 250+ LeetCode questions to sharpen my skills. Actively participating in
+          coding competitions like Google Code Jam and Meta Hacker Cup and hackathons drives my passion for continuous
+          learning and innovation.</p>
+        <p class="aboutmainpara">I am still undergraduate student at the University of Agriculture, Faisalabadand will
+          be graduate in June, 2024.</p>
+        <p class="aboutmainpara">I aim to pursue a PhD in the United States to advance in technology research and
+          innovation.</p>
+        <p class="aboutmainpara">Here are a few technologies I've been working with recently:</p>
+
+
+
+
+
+
+
+      </div>
+      <div class="aboutmainpic"><img src="Images/html-system-websites-collage-design.jpg" alt="error">
+      </div>
+
+
+    </div>
+
+    <div class="lists">
+      <div class="list1">
+        <ul>
+          <li> <span class="arrow"> ➾</span>C</li>
+          <li> <span class="arrow"> ➾</span>Dart </li>
+          <li> <span class="arrow"> ➾</span> Python</li>
+          <li> <span class="arrow"> ➾</span>Typescript </li>
+          <li> <span class="arrow"> ➾</span>CSS3 </li>
+          <li> <span class="arrow"> ➾</span>Chakra-UI </li>
+          <li> <span class="arrow"> ➾</span> Bootstrap-5</li>
+          <li> <span class="arrow"> ➾</span> React-Native</li>
+          <li> <span class="arrow"> ➾</span>FireStore </li>
+          <li> <span class="arrow"> ➾</span>Express-JS </li>
+          <li> <span class="arrow"> ➾</span> Git</li>
+          <li> <span class="arrow"> ➾</span>Rest-APIs </li>
+        </ul>
+      </div>
+      <div class="list2">
+        <ul>
+          <li> <span class="arrow"> ➾</span>C++</li>
+          <li> <span class="arrow"> ➾</span>Java (OOP + DSA) </li>
+          <li> <span class="arrow"> ➾</span> JavaScript (ES6+)</li>
+          <li> <span class="arrow"> ➾</span>HTML5 </li>
+          <li> <span class="arrow"> ➾</span>SCSS, SASS </li>
+          <li> <span class="arrow"> ➾</span>Aunt-Design </li>
+          <li> <span class="arrow"> ➾</span> React-JS</li>
+          <li> <span class="arrow"> ➾</span> Firebase</li>
+          <li> <span class="arrow"> ➾</span>Node-JS </li>
+          <li> <span class="arrow"> ➾</span>Mongo-DB </li>
+          <li> <span class="arrow"> ➾</span> Github</li>
+          <li> <span class="arrow"> ➾</span>GraphQL</li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="worked">
+      <div class="work1">
+        <span class="span">02.</span> <span>Where I've Worked</span>
+      </div>
+      <div class="workborder"></div>
+    </div>
+
+    <div class="workmain">
+      <div class="workmain1" " ">
+
+
+      </div>
+      <div class="workmain2">
+        <ul>
+          <li> <a href="">SMIT          </li>
+          <li>
+            <a href="">ZWtech</a>
+          </li>
+          <li>
+           <a href=""> Seerahat</a>
+          </li>
+          <li>
+            <a href="">Frelancing</a></li>
+        </ul>
+      </div>
+    </div>
+    << </main>
 
 </body>
 
