--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -143,21 +143,20 @@
 
     <div class="workmain">
       <div class="workmain1" " ">
-
+        <ul>
+          <li class="workmainli"> <a href="">SMIT          </li>
+          <li class="workmainli">
+            <a href="">ZWtech</a>
+          </li>
+          <li class="workmainli">
+           <a href=""> Seerahat</a>
+          </li>
+          <li class="workmainli">
+            <a href="">Frelancing</a></li>
 
       </div>
       <div class="workmain2">
-        <ul>
-          <li> <a href="">SMIT          </li>
-          <li>
-            <a href="">ZWtech</a>
-          </li>
-          <li>
-           <a href=""> Seerahat</a>
-          </li>
-          <li>
-            <a href="">Frelancing</a></li>
-        </ul>
+        
       </div>
     </div>
     << </main>
