--- a/Assignment-5/index.html
+++ b/Assignment-5/index.html
@@ -144,21 +144,91 @@
     <div class="workmain">
       <div class="workmain1" " ">
         <ul>
-          <li class="workmainli"> <a href="">SMIT          </li>
+          <li class="workmainli"> <a href="">SMIT </li>
           <li class="workmainli">
             <a href="">ZWtech</a>
           </li>
           <li class="workmainli">
-           <a href=""> Seerahat</a>
+            <a href=""> Seerahat</a>
           </li>
           <li class="workmainli">
-            <a href="">Frelancing</a></li>
+            <a href="">Frelancing</a>
+          </li>
 
       </div>
       <div class="workmain2">
-        
+
+        <p>Tech Trainer <span class="arrow"> @SMIT</span></p>
+        <p>Dec 2022 - present</p>
+        <p><span class="arrow">➾</span>
+          Instructed 500+ students.</p>
+        <p><span class="arrow">➾</span>
+          My role involves delivering comprehensive training sessions on the MERN stack, covering frontend and backend
+          development, database management, and mobile app development using React Native.</p>
+        <p>
+          <span class="arrow">➾</span>
+          I aim to empower students to become proficient MERN stack developers, providing them with practical knowledge
+          and guidance to build real-world applications using the MERN stack.
+        </p>
+        <p>
+          <span class="arrow">➾</span>Providing instructions in HTML5, CSS3, SCSS, SASS, Bootstrap 5, JavaScript ES6+,
+          TypeScript, React JS (Context API, Router, State Management), React Native, Redux, Firebase, Firestore, Node
+          JS (ExpressJS, Authentication, API Endpoint Handling), MongoDB, Heroku, Surge, Netlify (Hosting), Git, Github.
+        </p>
+        <p>
+          🔄 Courses
+        </p>
+        <p>
+          <span class="arrow">➾</span>GenAI_Chatbot_1.0 <span>(Current)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span> Backend_Development_1.0 <span class="grey"> (Completed)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span>
+          Full_Stack_Development_1.0 <span class="grey"> (Current)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span>
+          Web_Designing_Bootcamp_1.0 <span class="grey"> (Completed)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span>Web_Designing_Bootcamp_2.0 <span class="grey"> (Completed)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span>
+          Frontend_Web_Development_1.0 <span class="grey"> (Completed)</span>
+        </p>
+        <p>
+          <span class="arrow">➾</span>
+          Frontend_Mobile_Development_1.0 <span class="grey"> (Completed)</span>
+        </p>
       </div>
     </div>
+
+
+
+    <!-- Something built -->
+    <div class="worked">
+      <div class="work1">
+        <span class="span">02.</span> <span>Something I've built</span>
+      </div>
+      <div class="workborder"></div>
+    </div>
+
+
+    <div class="builtbox1">
+      <div class="builtbox1main">
+        <h5 class="arrow">Featured Project</h5>
+        <h3>AI Podcast Generator</h3>
+        <p>This project transforms written content into captivating, lifelike podcasts effortlessly using ElevenLabs
+          API-powered speech synthesis.</p>
+          <span><a href="https://github.com/Arham-Naveed/SMIT-Assignments"><i class="fa-brands fa-github"></i></a><a href="https://www.linkedin.com/in/arham-naveed-5ab5132b4/"><i class="fa-solid fa-link"></i></a></span>
+
+      </div>
+      <div class="builtboximage1"> <a href=""><img src="Images/4729088.jpg" alt="error"></a></div>
+    </div>
+
     << </main>
 
 </body>
